<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">right2vote</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_send">Send this text</string>
    <string name="image_desc">This is an image</string>
    <string name="issues">issues</string>
    <string name="myBallot">my ballot</string>
    <string name="logistics">logistics</string>
    <string name="share">share</string>
    <string name="logistics_map_label">Where:</string>
    <string name="logistics_date_label">When:</string>
    <string name="logistics_date">November 8th, 2016</string>
    <string name="home_button">home</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="still_statements">Once you rank issues we will have the data to give you your results!</string>
    <string name="issues_button">Rank Issues</string>
    <string name="winningCandidateTitle">Your Match</string>
    <string name="hilaryChosenText">Clinton\'s foreign policy platform is focused primarily on reducing military spending, maintaining tough sanctions on Iran and Russia, settling Arab-Israeli peace, weakening the Assad regime in Syria, and providing non-lethal military assistance.</string>
    <string name="cruzChosenText">Ted Cruz is</string>
    <string name="hilary">Hilary Clinton</string>
    <string name="cruz">Ted Cruz</string>
    <string name="title_activity_policy_statement">Rank the Issues</string>
    <string name="title_activity_go_home">GoHomeActivity</string>
    <string name="title_activity_show_candidate">Your Match</string>
    <string name="title_activity_show_winner">ShowWinnerActivity</string>
    <string name="title_activity_show_ballot">Your Ballot</string>
    <string name="title_activity_ballot">BallotActivity</string>
    <string name="title_activity_voting_logistics">Logistics</string>
    <string name="shared">Shared! (Stubbed Out)</string>    

    <color name="red">#FFFFFF</color>

    <string name="title_activity_show_policy_areas">ShowPolicyAreasActivity</string>
    <string name="title_activity_show_share">ShowShareActivity</string>

</resources>
