<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.right2vote.PolicyStatementActivity" >

    <TextView
        android:id="@+id/policyStatement"
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    />
        
    
    <Button
    android:onClick="goHome"
    android:id="@+id/homeButton"
    android:text="@string/home_button"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    />
    
    <Button
    android:onClick="nextPolicyStatementOrFinish"
    android:layout_below="@id/homeButton"
    android:id="@+id/agree"
    android:text="@string/agree" 
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    />
    
    <Button
    android:onClick="nextPolicyStatementOrFinish"
    android:layout_below="@id/agree"
    android:id="@+id/disagree"
    android:text="@string/disagree" 
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    />

</RelativeLayout>
