<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.right2vote.VotingLogisticsActivity" >
    <TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:id="@+id/logisticsDateLabel"
	    android:text="@string/logistics_date_label"
	    android:textSize="24sp"
	    android:textColor="#000000"
	    android:textIsSelectable="true" />
    <TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingLeft="15dp"
	    android:id="@+id/logisticsDate"
	    android:text="@string/logistics_date"
	    android:textSize="18sp"
	    android:textStyle="bold"
	    android:textColor="#000000"
	    android:textIsSelectable="true"
	    android:layout_below="@id/logisticsDateLabel" />
   	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:id="@+id/logisticsMapLabel"
	    android:text="@string/logistics_map_label"
	    android:textSize="24sp"
	    android:textColor="#000000"
	    android:textIsSelectable="true"
	    android:paddingBottom="10dp"
	    android:layout_below="@id/logisticsDate" />
    <ImageView
	    android:paddingLeft="15dp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:id="@+id/logisticsMap"
	    android:src="@drawable/my_voting_location"
		android:contentDescription="@string/image_desc"
		android:layout_below="@id/logisticsMapLabel"
		android:paddingBottom="10dp" />
    <Button
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:id="@+id/homeButton"
	    android:text="@string/home_button"
	    android:layout_below="@id/logisticsMap" 
	    android:onClick="goHome" />
</RelativeLayout>
